@@ -18,6 +18,7 @@ since 1999.  If I missed your name, let me know.
 * Volker Aust
 * Hendrik Baecker
 * Michael Bailey
+* Luigi Balzano
 * Sebastien Barbereau
 * Wolfgang Barth
 * Simon Beale
@@ -72,6 +73,7 @@ since 1999.  If I missed your name, let me know.
 * Andy Finkenstadt
 * Mika Fischer
 * Matthias Flacke
+* Marcus Fleige
 * Matthias Flittner
 * Szabo Gabor
 * Dan Gailey
@@ -176,6 +178,7 @@ since 1999.  If I missed your name, let me know.
 * David Schlecht
 * Russell Scibetti
 * Thomas Sebastien
+* Brian Seklecki
 * Lonny Selinger
 * Nate Shafer
 * Moshe Sharon
@@ -209,6 +212,7 @@ since 1999.  If I missed your name, let me know.
 * Lars Vogdt
 * Phil Walther
 * Jeremy Weatherford
+* Holger Weiss
 * Tom Welsh
 * Brad Werschler
 * Peter Westlake
